# ForgeArena

./: .dockerignore  .gitignore  .hfignore  Dockerfile  README.md  README_HF.md  __init__.py  blog.md  client.py  critique_assessment.html  explanation.md  forge_arena_design_doc.md  grpo_training.ipynb  grpo_unsloth_trainer.ipynb  models.py  nginx.conf  openenv.yaml  pyproject.toml  results.json  results_phase3.json  supervisord.conf  train_phase1.py  train_phase2_calibrate.py  train_phase3.py
.github/: copilot-instructions.md
.github/instructions/: arena.instructions.md  forge.instructions.md  graders.instructions.md
.github/prompts/: add-domain.prompt.md  add-grader-checkpoint.prompt.md  generate-task.prompt.md
.github/workflows/: ci.yml
datasets/overseer-episodes/: data-00000-of-00001.arrow  dataset_info.json  rows.jsonl  state.json
datasets/overseer-episodes-phase2/: data-00000-of-00001.arrow  dataset_info.json  rows.jsonl  state.json
plots_final/: summary_comparison.txt
scripts/: plot_final.py  plot_results.py  run_eval.py  run_fair_eval.py  write_seed_tasks.py
scripts/train_mechanism_clf/: dataset.py  train.py
server/: app.py
src/forge_arena/: __init__.py  config.py  env.py  main.py
src/forge_arena/arena/: __init__.py  episode.py  worker.py
src/forge_arena/forge/: __init__.py  estimator.py  generator.py  scheduler.py
src/forge_arena/graders/: __init__.py  composite.py  correction.py  detection.py  (+1 more)
tasks/: seed_tasks.json  task_schema.json
tests/: test_episode.py  test_forge.py  test_graders.py
ui/: index.html  package.json  tailwind.config.js
ui/src/: App.jsx  index.css
(+33 files in other folders)
